[tool.poetry]
name = "mullvad"
version = "0.1.0"
description = ""
authors = ["Dave Williams <dave@dave.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
cryptography = "^43.0.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
